src/objects/Land_Broker__c.object
<CustomObject>
    <description>MG_Land Broker</description>
    <fields>
        <fullName>Broker_Logo_URL__c</fullName>
        <inlineHelpText>Paste shared dropbox link here.  Update dl=0 at the end of the link to raw=1.</inlineHelpText>
        <label>Broker Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brokerage_Website__c</fullName>
        <label>Brokerage Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Land Broker</label>
    <nameField>
        <label>Land Broker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land Brokers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>